--- a/pages/activites.html
+++ b/pages/activites.html
@@ -2,12 +2,24 @@
 
 <div class="card-deck mb-5">
   <div class="card">
+    <img src="/images/conf-cop27.jpg" class="card-img-top img-thumbnail" alt="...">
+    <div class="card-body">
+    	<h4 class="card-title font-weight-bold" style="color: #6ebe00;">Campagne «En Route pour Sharm El Sheikh»</h4>
+      <p class="card-text">Sous le parrainage du Délégué Départemental de l'Environnement du Wouri, l'Association Camerounaise pour le Développement, l’Entraide Sociale et la Protection de l’Environnement (ACDESPE) organise avec l’appui financier de Climate Action Network – West and Central Africa (CANWA) une mini conférence débat sur le thème: <strong>Rendre accessibles et bénéfiques les marchés internationaux du carbone pour les communautés locales au Cameroun</strong>.</p>
+      
+      <p class="card-text">Elle a pour objectifs d’exhorter les décideurs locaux à renforcer la prise en comptes des marchés internationaux du carbone dans leurs politiques climatiques nationales et locales, tout en sensibilisant les décideurs, les communautés locales et la jeunesse sur la nécessité de s’engager dans les marchés internationaux du carbone.</p>
+    </div>
+  </div>
+  <div class="card">
     <img src="/images/eco-verte.jpg" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
     	<h4 class="card-title font-weight-bold" style="color: #6ebe00;">Forum National de l'Économie Verte</h4>
       <p class="card-text">Le Forum National de l’Économie Verte (FONEV) a pour ambition de réunir les acteurs engagés sur la problématique du réchauffement climatique afin d’identifier des solutions vertes innovantes et de promouvoir l’élaboration et la mise en œuvre de politiques vertes aux niveaux national et régional.</p>
     </div>
   </div>
+</div>
+
+<div class="card-deck mb-5">
   <div class="card">
     <img src="/images/eau-sachet.jpg" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
@@ -15,19 +27,19 @@
       <p class="card-text">L'ACDESPE plaide pour la commercialisation des eaux saines en milieux scolaires et sur le marché camerounais à travers son projet de lutte contre la production des eaux en sachet non agréées. Elle appuie ainsi l'action du Ministère de la Santé publique dont l'une des missions est de veiller à la santé de tous les citoyens à travers la lutte contre les maladies hydriques.</p>
     </div>
   </div>
-</div>
-
-<div class="card-deck mb-5">
   <div class="card">
-    <img src="/images/eco-peda.jpg" class="card-img-top" alt="...">
+    <img src="/images/eco-peda.jpg" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
       <h4 class="card-title font-weight-bold" style="color: #6ebe00;">Voyages Éco-Pédagogiques</h4>
       <p class="card-text">Comment concilier développement et protection de l’environnement ? Cette question est à l'origine du projet Voyages Éco-Pédagogiques, qui nous mènera pendant 05 ans à la découverte des technique de conservation des écosystèmes, traditionnelles et/ou innovantes s’inscrivant pleinement dans quatre des dix-sept Objectifs du Développement Durable. Il s’agit d’aller à la rencontre des Éco-gardes, des conservateurs ou spécialiste QHSE (Qualité Hygiène Sécurité Environnement) susceptibles de transmettre leur savoir faire aux jeunes élèves et étudiants qui pendant quelques jours se mettront dans la peau d’un Éco-garde.</p>
 		<p class="card-text">Ce projet s'articule autour des programmes scolaires définis par l’Éducation Nationale à travers de nombreuses disciplines enseignées et a pour objectif général de sensibiliser et d'éduquer les étudiants et élèves des universités et lycées/collèges de Douala à la protection de l’environnement, en leur offrant la possibilité de toucher du doigt la réalité en la matière, dans une réserve forestière, un zoo, un parc ou encore un grand chantier.</p>
     </div>
   </div>
+</div>
+
+<div class="card-deck mb-5">
   <div class="card">
-    <img src="/images/eco-plus.jpg" class="card-img-top" alt="...">
+    <img src="/images/eco-plus.jpg" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
       <h4 class="card-title font-weight-bold" style="color: #6ebe00;">Caravane ECOPLUS</h4>
       <p class="card-text">La caravane ECOPLUS est une caravane citoyenne de propreté qui mobilise chaque année des bénévoles et des volontaires, entre amis ou entre collègues pour l'assainissement des drains, le ramassage des déchets, et la sensibilisation des populations. Elle permet ainsi de contribuer a améliorer le cadre de vie des populations.</p>
@@ -42,18 +54,11 @@
       </ul>
     </div>
   </div>
-</div>
-
-<div class="conatiner">
-<div class="row">
-<div class="col-lg-6 col-md-6 col-sm-6">
-<div class="card" style="width: 5erm;">
+  <div class="card">
     <img src="/images/sante-dd.jpg" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
       <h4 class="card-title font-weight-bold" style="color: #6ebe00;">Lutte Contre le VIH/SIDA</h4>
       <p class="card-text">L'ACDESPE travaille en collaboration avec Synergies Africaines dans le cadre de la lutte contre le VIH-SIDA à travers le programme <em>Mon Pari pour 2030</em>. Elle organise des campagnes de sensibilisation et d’éducation dans les établissements scolaires à travers le triangle National.</p>
     </div>
   </div>
-</div>
-</div>
 </div>
