--- a/pages/ramac-2023.html
+++ b/pages/ramac-2023.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="card mb-5 border-0">
-  <h3 class="card-header bg-transparent text-primary">RAMAC 2023, EN BREF</h3>
+  <h3 class="card-header bg-transparent text-primary">RAMAC2023 EN BREF...</h3>
   <div class="card-body">
     <p class="card-text">Sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun, la première édition des <strong>RAMAC (Rencontres Africaine des Marchés Carbone)</strong>, se tiendra dans le Bassin du Congo, deuxième puits de carbone mondial après l’Amazonie; plus précisément à Douala, capitale économique du Cameroun. Cette édition qui est consacrée aux processus d'apprentissages, de partages et de collaborations autour des marchés internationaux du carbone et de la finance climatique se déroulera du 04 au 07 Octobre 2023 sous le thème: <strong class="font-italic">Investir dans les marchés carbone pour une contribution au développement local et la conservation des écosystèmes en Afrique.</strong> Elle réunira près de 40 artistes et musiciens, 100 conférenciers, 500 participants, et environ 10 000 visiteurs issu de 47 Pays d'Afrique et du monde.</p>
     <p class="card-text">Ces rencontres qui s’inscrivent dans un contexte de relance des activités climatiques et environnementales post-COVID visent à amplifier la dynamique des marchés internationaux du carbone en Afrique, tout en incitant les États africain à s’engager d’avantage au sein des nouveaux marchés tel que le régime de compensation des émissions de CO2 de l’aviation civile internationale (CORSIA);  non seulement pour compenser les émissions des Pays développés, mais également contribué au développement local et la conservation des écosystèmes des États africains à travers des solutions durables et sobres en carbone.</p>
@@ -25,8 +25,8 @@
 <div class="card-deck mb-3 text-center pl-3 pr-3">
   <div class="card bg-primary">
     <div class="card-body">
-  	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->+10 000</h4>
-      <p class="card-text text-white">Visiteurs par jour</p>
+  	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->100</h4>
+      <p class="card-text text-white">Conférenciers</p>
     </div>
   </div>
   <div class="card bg-primary">
@@ -37,20 +37,14 @@
   </div>
   <div class="card bg-primary">
     <div class="card-body">
-  	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->100</h4>
-      <p class="card-text text-white">Conférenciers</p>
-    </div>
-  </div>
-  <div class="card bg-primary">
-    <div class="card-body">
   	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->40</h4>
-      <p class="card-text text-white">Artistes et musiciens</p>
+      <p class="card-text text-white">Artistes</p>
     </div>
   </div>
   <div class="card bg-primary">
     <div class="card-body">
-  	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->47</h4>
-      <p class="card-text text-white">Pays représentés</p>
+  	<h4 class="card-title font-weight-bold" style="color: #6ebe00;"><!--<span class="oi oi-droplet mr-2"></span>-->+10 000</h4>
+      <p class="card-text text-white">Visiteurs</p>
     </div>
   </div>
 </div>
@@ -107,5 +101,65 @@
 	 		</div>
 	 	</div>
 	</div>
+</div>
+</div>
+
+<div class="card mb-5 border-0">
+  <h3 class="card-header bg-transparent text-primary">CONTACT</h3>
+  <div class="card-body">
+    <h4 class="card-title">SECRÉTARIAT PERMANENT</h4>
+    <p class="card-text"><strong>Téléphone</strong>: +237 696197375</p>
+    <p class="card-text"><strong>Email</strong>: social_acdespe@yahoo.fr</p>
+  </div>
+</div>
+
+<div class="card mb-5 border-0">
+<h3 class="card-header mb-3 bg-transparent text-primary">PARTENAIRES</h3>
+<div class="card-deck mb-3 text-center">
+  <div class="card border-0">
+    <div class="card-body">
+  	<img src="/images/france.jpg" class="card-img-top img-thumbnail" alt="France">
+	 <div class="d-none d-md-block">
+	 <p class="font-weight-bolder">France</p>
+	 </div>
+    </div>
+  </div>
+  
+  <div class="card border-0">
+    <div class="card-body">
+  	<img src="/images/usa.jpg" class="card-img-top img-thumbnail" alt="USA">
+	 <div class="d-none d-md-block">
+	 <p class="font-weight-bolder">USA</p>
+	 </div>
+    </div>
+  </div>
+  
+  <div class="card border-0">
+    <div class="card-body">
+  	<img src="/images/south-korea.jpg" class="card-img-top img-thumbnail" alt="South Korea">
+	 <div class="d-none d-md-block">
+	 <p class="font-weight-bolder">Corée du Sud</p>
+	 </div>
+    </div>
+  </div>
+  
+  <div class="card border-0">
+    <div class="card-body">
+  	<img src="/images/meta.jpg" class="card-img-top img-thumbnail" alt="Meta">
+	 <div class="d-none d-md-block">
+	 <p class="font-weight-bolder">Meta</p>
+	 </div>
+    </div>
+  </div>
+  
+  <div class="card border-0">
+    <div class="card-body">
+  	<img src="/images/raccc.jpg" class="card-img-top img-thumbnail" alt="RACCC">
+	 <div class="d-none d-md-block">
+	 <p class="font-weight-bolder">RACCC</p>
+	 </div>
+    </div>
+  </div>
+  
 </div>
 </div>
