--- a/output/ramac-2023/index.html
+++ b/output/ramac-2023/index.html
@@ -82,11 +82,11 @@ bg-dark
 <article class="post-text storypage" itemscope="itemscope" itemtype="http://schema.org/Article"><header></header><div class="e-content entry-content" itemprop="articleBody text">
     <div class="card mb-5 text-center font-weight-bold">
   <img src="../images/feature.jpg" class="card-img-top img-thumbnail" alt="..." style="width: 100%; height: 640px; object-fit: cover;"><div class="card-img-overlay position-absolute font-weight-bold" style="top: 8%;">
-  <h3 class="card-title">Sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun</h3>
+  <h3 class="card-title text-white">Sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun</h3>
   <h3 class="card-title font-weight-bolder" style="color: #6ebe00;">1ère Rencontres Africaine des Marchés Carbone</h3>
   
-    <h1 class="card-header font-weight-bolder">RAMAC 2023</h1>
-    <h3 class="card-title">Douala-Cameroun, du 04 au 07 Octobre 2023</h3>
+    <h1 class="card-header font-weight-bolder text-white">RAMAC 2023</h1>
+    <h3 class="card-title text-white">Douala-Cameroun, du 04 au 07 Octobre 2023</h3>
   <a class="btn btn-success btn-lg text-uppercase" style="background-color: #6ebe00; border-color: #6ebe00;" href="https://wa.me/237696197375?text=Bonjour%2C%20j'aimerais%20en%20savoir%20plus%20sur%20votre%20%C3%A9v%C3%A8nement%2C%20le%20RAMAC%202023.">Tout Savoir</a>
   </div>
 </div>
