--- a/ramac-2023/index.html
+++ b/ramac-2023/index.html
@@ -81,19 +81,19 @@ bg-dark
         
 <article class="post-text storypage" itemscope="itemscope" itemtype="http://schema.org/Article"><header></header><div class="e-content entry-content" itemprop="articleBody text">
     <div class="card mb-5 text-center font-weight-bold">
-  <img src="../images/feature.jpg" class="card-img-top img-thumbnail" alt="..." style="width: 100%; height: 640px; object-fit: cover;"><div class="card-img-overlay position-absolute font-weight-bold" style="top: 8%;">
-  <h3 class="card-title text-white">Sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun</h3>
+  <img src="../images/feature.jpg" class="card-img-top img-thumbnail" alt="..."><!--<div class="card-img-overlay position-absolute font-weight-bold" style="top: 8%;">
+  <h3 class="card-title text-white" style="text-shadow: black;">Sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun</h3>
   <h3 class="card-title font-weight-bolder" style="color: #6ebe00;">1ère Rencontres Africaine des Marchés Carbone</h3>
   
     <h1 class="card-header font-weight-bolder text-white">RAMAC 2023</h1>
     <h3 class="card-title text-white">Douala-Cameroun, du 04 au 07 Octobre 2023</h3>
   <a class="btn btn-success btn-lg text-uppercase" style="background-color: #6ebe00; border-color: #6ebe00;" href="https://wa.me/237696197375?text=Bonjour%2C%20j'aimerais%20en%20savoir%20plus%20sur%20votre%20%C3%A9v%C3%A8nement%2C%20le%20RAMAC%202023.">Tout Savoir</a>
-  </div>
+  </div>-->
 </div>
 
 <div class="card mb-5 border-0">
   <h3 class="card-header bg-transparent text-primary">RAMAC2023 EN BREF...</h3>
-  <div class="card-body">
+  <div class="card-body text-justify">
     <p class="card-text">Sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun, la première édition des <strong>RAMAC (Rencontres Africaine des Marchés Carbone)</strong>, se tiendra dans le Bassin du Congo, deuxième puits de carbone mondial après l’Amazonie; plus précisément à Douala, capitale économique du Cameroun. Cette édition qui est consacrée aux processus d'apprentissages, de partages et de collaborations autour des marchés internationaux du carbone et de la finance climatique se déroulera du 04 au 07 Octobre 2023 sous le thème: <strong class="font-italic">Investir dans les marchés carbone pour une contribution au développement local et la conservation des écosystèmes en Afrique.</strong> Elle réunira près de 40 artistes et musiciens, 100 conférenciers, 500 participants, et environ 10 000 visiteurs issu de 47 Pays d'Afrique et du monde.</p>
     <p class="card-text">Ces rencontres qui s’inscrivent dans un contexte de relance des activités climatiques et environnementales post-COVID visent à amplifier la dynamique des marchés internationaux du carbone en Afrique, tout en incitant les États africain à s’engager d’avantage au sein des nouveaux marchés tel que le régime de compensation des émissions de CO2 de l’aviation civile internationale (CORSIA);  non seulement pour compenser les émissions des Pays développés, mais également contribué au développement local et la conservation des écosystèmes des États africains à travers des solutions durables et sobres en carbone.</p>
     <p class="card-text">Depuis l’avènement des marchés carbone, l’Afrique n’a pas véritablement tiré profit : on note seulement 2.8 % environ de projets développés en Afrique sous le Mécanisme de Développement Propre (MDP), avec un transfert de connaissance très limité. Pourtant l’Afrique est responsable de moins de 4 % des émissions de gaz à effet de serre dans le monde, et le continent subit de plein fouet les effets néfastes des changements climatiques par rapport aux autres continents, particulièrement les femmes et les jeunes.</p>
